# Investmann

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.deploy/dev/: clearsessions.yaml  configmap.yaml  psql_root_crt.yaml  restart.sh
.deploy/dev-investmann-main-distracted-keldysh/: README.md  clearsessions.yaml  configmap.yaml  deploy.sh  django.yaml  migrate.yaml  psql_root_crt.yaml  restart.sh
.gitlab/merge_request_templates/: default.md
src/: conftest.py  env_settings.py  fixtures.json  test_tools_for_testing.py
src/.contrib-candidates/: README.md
src/.contrib-candidates/django_tg_bot_framework/: README.md  __init__.py  locator_field.py  views.py
src/.contrib-candidates/mysent/: README.md  __init__.py  exceptions.py  message_class.py  renderers.py  router.py  templater.py
src/.contrib-candidates/yostate/: __init__.py  concepts.yaml  locators.py  router.py  state_class_locator_validators.py  sync_crawler.py
src/auth/: admin.py  apps.py  models.py
src/auth/migrations/: 0001_initial.py  0002_user_image.py
src/project/: settings.py  urls.py
src/static/admin/: save-hotkey.js  sticky-save.css
src/tg_bot/: admin.py  apps.py  decorators.py  models.py  states.py  urls.py
src/tg_bot/migrations/: 0001_initial.py  0002_alter_conversation_state_machine_locator.py  0003_messageseries_textmessage_imagemessage_and_more.py  0004_remove_imagemessage_series_remove_textmessage_series_and_more.py  (+2 more)
src/trigger_mailing/: admin.py  apps.py  models.py  state_machine.py
(+84 files in other folders)
